# modiface-real-time-face-detection

./: .gitignore  model_test_python.py
burn/: Cargo.toml  run.sh
burn/src/: lib.rs  mobilefacenet.rs  model.rs  state.rs  web.rs
facenet/: Cargo.toml
facenet/src/: lib.rs
frontend/: .eslintrc  package-lock.json  package.json
frontend/src/: App.js  DrawingCanvas.js
frontend/src/components/: FabricCanvas.js  ProbabilityChart.js  ScaledCanvas.js  utils.js
mnist-inference-web/: Cargo.toml
mnist-inference-web/src/: web.rs
src/: web.rs
test/: Cargo.toml
test/src/: main.rs  mobilefacenet.rs
yolo/: Cargo.toml
yolo/examples/: inference.rs
yolo/src/: lib.rs  web.rs
yolo/src/yolox_model/: darknet.rs  head.rs  mod.rs  yolox.rs
