[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
license = "MIT OR Apache-2.0"
name = "mnist-inference-web"
publish = false
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu", "cubecl-runtime"]

[dependencies]
burn = { version = "0.14.0", default-features = false }
cubecl-runtime = { version = "0.3.0", optional = true, features = ["channel-mpsc"] } # missing feature flag
serde = { version = "1.0.215", default-features = false, features = [
    "derive",
    "alloc",
] }
console_error_panic_hook = "0.1.7"

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
