[package]
name = "yolo"
version = "0.1.0"
authors = ["Dilshod Tadjibaev (@antimora)"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = "0.14.0"
burn-import = { version = "0.14.0", default-features = false, features = ["pytorch"] }
serde = "1.0"
itertools = { version = "0.12.1", default-features = false, features = [
    "use_alloc",
] }
console_error_panic_hook = "0.1.7"
image = { version = "0.24.9", features = ["png", "jpeg"] }
zip = { version = "0.5.0", default-features = false, features = ["deflate"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"